--- a/FormInput.scss
+++ b/FormInput.scss
@@ -3,7 +3,7 @@
     margin-top: 30px;
     background-color: burlywood;
   }
-  input[type='number'] {
+  input[type='text'] {
     text-align: right;
   }
 }
