--- a/AlbaCalc.scss
+++ b/AlbaCalc.scss
@@ -6,7 +6,7 @@ body {
   .contents {
     margin: 0 auto;
     padding: 15px;
-    background-color: #f1faee;
+    background-color: #ffffff;
     color: #1d3557;
     border: 1px solid #393e46;
     border-radius: 10px;
