--- a/AlbaCalc.scss
+++ b/AlbaCalc.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700&display=swap');
+
 body {
   display: flex;
   justify-content: center;
@@ -8,24 +9,55 @@ body {
     margin: 0 auto;
     padding: 15px;
     background-color: #ffffff;
-    color: #1d3557;
     #title {
       font-weight: bold;
       color: white;
       text-align: center;
       background-color: #1d3557;
     }
+    h3 {
+      color: #1d3557;
+    }
     #description {
       text-align: center;
     }
-    .btn {
-      width: 150px;
-      #calculate {
-        background-color: royalblue;
-      }
-      #reset {
-        background-color: tomato;
-      }
+    input {
+      width: 80%;
+      height: 1.25rem;
     }
+  }
+}
+.btn {
+  padding: 0.375rem 0.75rem;
+  margin: 3px;
+  width: 9rem;
+  border: 1px solid;
+  border-radius: 0.25rem;
+  font-size: 1rem;
+  cursor: pointer;
+}
+#calculate {
+  color: #ffffff;
+  border-color: hsl(211, 96%, 56%);
+  background-color: hsl(211, 96%, 56%);
+  &:hover {
+    background-color: hsl(211, 92%, 39%);
+  }
+  &:focus {
+    background-color: hsl(211, 92%, 39%);
+    color: #fff;
+  }
+}
+#reset {
+  color: #dc3545;
+  border-color: #dc3545;
+  background-color: #ffffff;
+  &:hover {
+    color: #ffffff;
+    background-color: #dc3545;
+  }
+  &:focus {
+    background-color: #dc3545;
+    color: #fff;
   }
 }
