--- a/AlbaCalc.scss
+++ b/AlbaCalc.scss
@@ -36,6 +36,16 @@ body {
   font-size: 1rem;
   cursor: pointer;
 }
+#inputDiv {
+  border: 1px solid #757575;
+  border-radius: 1.5rem;
+  margin-top: 1.5rem;
+  padding: 1.5rem;
+}
+#bottomBtn {
+  margin-top: 1.5rem;
+  text-align: center;
+}
 #calculate {
   color: #ffffff;
   border-color: hsl(211, 96%, 56%);
@@ -44,7 +54,7 @@ body {
     background-color: hsl(211, 92%, 39%);
   }
   &:focus {
-    background-color: hsl(211, 92%, 39%);
+    background-color: #1d3557;
     color: #fff;
   }
 }
